--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "vite build --watch",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "howler": "^2.2.3",
     "pixi.js": "^6.3.0",
+    "vite": "^2.9.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
-  }
+  },
+  "type": "module"
 }
